--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-app": "electron-builder",
     "dist": "npm run build-backend && electron-builder --publish=never",
     "pack": "electron-builder --dir",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps && electron-rebuild"
   },
   "keywords": [
     "electron",
@@ -118,7 +118,6 @@
     }
   },
   "dependencies": {
-    "@nathandiepeveen/vosk": "^0.3.50",
     "edge-tts-node": "^1.5.7",
     "electron-is-dev": "^2.0.0",
     "firebase": "^12.7.0",
@@ -128,12 +127,12 @@
     "node-global-key-listener": "^0.1.1",
     "openai": "^4.104.0",
     "python-shell": "^5.0.0",
-    "say": "^0.16.0",
-    "vosk": "^0.3.39"
+    "say": "^0.16.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "electron": "^28.0.0",
-    "electron-builder": "^24.0.0"
+    "electron-builder": "^24.0.0",
+    "electron-rebuild": "^3.1.5"
   }
 }
