--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,6 @@ aiohttp>=3.8.0
 
 # Optional: Additional utilities
 requests>=2.28.0
+
+
+#  "electron-rebuild": "^3.1.5" removed from package.json to fix linux compilation issues
