--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -67,6 +67,10 @@ jobs:
       with:
         python-version: '3.11'
     
+    - name: Install system dependencies
+      run: |
+        brew install portaudio
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
