--- a/package.json
+++ b/package.json
@@ -132,6 +132,6 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "electron": "^28.0.0",
-    "electron-builder": "^24.0.0",
+    "electron-builder": "^24.0.0"
   }
 }
