--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ CHAT_WINDOW_ALWAYS_ON_TOP=true
 NODE_ENV=development
 HOT_RELOAD=true
 porcupine = 9EttpjRka/x8fH6GtikEIU3UB0nXm+UoQkTBhsWKEn9s1TgBGpSLxQ==
+
+gemini-2.5-computer-use-preview-10-2025
